Fix color of dark mode code editor

--- a/styles/code-editor.scss
+++ b/styles/code-editor.scss
@@ -3,11 +3,15 @@
   padding: var(--spacing-sm);
   .dark-theme & {
     background-color: #DDD;
+    color: black;
   }
 }
 
 .dark-theme .code-editor-container {
   filter: invert(100%);
+  & .circle-button {
+    filter: invert(100%);
+  }
 }
 
 .cm-editor * {
